# swagger/swagger/swagger.yml
@@ -6,15 +6,15 @@ info:
 servers:
   - url: http://localhost:5001
 tags:
-  - name: Health
-    description: Service Health Status
   - name: Users
     description: User Operations
+  - name: Service Health
+    description: Service Health Status
 paths:
   /users-service/health:
     get:
       tags:
-        - Health
+        - Service Health
       summary: Service health
       responses:
         '200':
@@ -50,6 +50,32 @@ paths:
               schema:
                 $ref: "#components/responses/BadRequest"
   /user/{id}:
+    get:
+      tags:
+        - Users
+      summary: Get User
+      description: Get an existing User
+      parameters:
+        - name: id
+          in: path
+          description: User id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: User succesfullt retreived.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/User"
+        '404':
+          description: User not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/NotFound"
     put:
       tags:
         - Users
@@ -113,25 +139,9 @@ paths:
                 $ref: "#components/responses/NotFound"
 components:
   schemas:
-    Health:
-      properties:
-        message:
-          type: string
-          description: Health status
-    UserBase:
-      properties:
-        first_name:
-          type: string
-          description: User first name
-        last_name:
-          type: string
-          description: User last name
-        email:
-          type: string
-          description: User email
     UserCreate:
       allOf:
-        - $ref: "#/components/schemas/UserBase"
+        - $ref: "#/components/requestBodies/UserBase"
         - required:
           - first_name
           - last_name
@@ -143,14 +153,14 @@ components:
               description: User password
     UserUpdate:
       allOf:
-        - $ref: "#/components/schemas/UserBase"
+        - $ref: "#/components/requestBodies/UserBase"
         - required:
           - first_name
           - last_name
           - email
     User:
       allOf:
-        - $ref: "#/components/schemas/UserBase"
+        - $ref: "#/components/requestBodies/UserBase"
         - required:
           properties:
             id:
@@ -169,6 +179,23 @@ components:
             active:
               type: boolean
               description: User active status
+    Health:
+      properties:
+        message:
+          type: string
+          description: Health status
+  requestBodies:
+    UserBase:
+      properties:
+        first_name:
+          type: string
+          description: User first name
+        last_name:
+          type: string
+          description: User last name
+        email:
+          type: string
+          description: User email
   responses:
     BadRequest:
       properties:
